UPD: update repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-modal",
+  "name": "@johnnywang/vue2-modal",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Johnny Wang <johnny29621189@kimo.com>",
